--- a/index.html
+++ b/index.html
@@ -58,14 +58,12 @@
 				</button>
 				<div class="collapse navbar-collapse" id="navbarNavAltMarkup">
 					<div class="navbar-nav ml-auto">
-						<a class="nav-link" href="#rsvp">RSVP</a>
-						<a class="nav-link" href="#church">Church</a>
-						<a class="nav-link" href="#venue">Venue</a>
-						<a class="nav-link" href="#hotels">Hotels</a>
-						<a class="nav-link" href="#travel-information"
-							>Travel Information</a
-						>
-						<a class="nav-link" href="#faqs">FAQs</a>
+						<a class="nav-link js-scroll-trigger" href="#">RSVP</a>
+						<a class="nav-link js-scroll-trigger" href="#church">Church</a>
+						<a class="nav-link js-scroll-trigger" href="#venue">Venue</a>
+						<a class="nav-link js-scroll-trigger" href="#hotels">Hotels</a>
+						<a class="nav-link js-scroll-trigger" href="#travel-information">Travel Information</a>
+						<a class="nav-link js-scroll-trigger" href="#faqs">FAQs</a>
 					</div>
 				</div>
 			</div>
@@ -85,7 +83,7 @@
 					><button class="rsvp-button">
 						<img
 							class="invitation-image"
-							src="/images/wedding-card.svg"
+							src="/images/jumbotron/wedding-card.svg"
 							alt="invitation"
 						/>RSVP
 					</button></a
@@ -406,6 +404,9 @@
 			</div>
 		</div>
 
+		
+ 
+
 		<!-- Bootstrap scripts -->
 		<script
 			src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
@@ -424,5 +425,8 @@
 			integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s"
 			crossorigin="anonymous"
 		></script>
+
+		<!-- Custom JavaScript -->
+		<script src="javascript/navbarCollapse.js" type="text/javascript"></script>
 	</body>
 </html>
