scroll-behavior is not supported by Safari. Added some custom JavaScript to enable smooth scrolling for Safari.

--- a/index.html
+++ b/index.html
@@ -58,12 +58,12 @@
 				</button>
 				<div class="collapse navbar-collapse" id="navbarNavAltMarkup">
 					<div class="navbar-nav ml-auto">
-						<a class="nav-link js-scroll-trigger" href="#">RSVP</a>
-						<a class="nav-link js-scroll-trigger" href="#church">Church</a>
-						<a class="nav-link js-scroll-trigger" href="#venue">Venue</a>
-						<a class="nav-link js-scroll-trigger" href="#hotels">Hotels</a>
-						<a class="nav-link js-scroll-trigger" href="#travel-information">Travel Information</a>
-						<a class="nav-link js-scroll-trigger" href="#faqs">FAQs</a>
+						<a class="nav-link js-scroll-trigger" onclick="scrollToSection(event)" href="#">RSVP</a>
+						<a class="nav-link js-scroll-trigger" onclick="scrollToSection(event)" href="#church">Church</a>
+						<a class="nav-link js-scroll-trigger" onclick="scrollToSection(event)" href="#venue">Venue</a>
+						<a class="nav-link js-scroll-trigger" onclick="scrollToSection(event)" href="#hotels">Hotels</a>
+						<a class="nav-link js-scroll-trigger" onclick="scrollToSection(event)" href="#travel-information">Travel Information</a>
+						<a class="nav-link js-scroll-trigger" onclick="scrollToSection(event)" href="#faqs">FAQs</a>
 					</div>
 				</div>
 			</div>
@@ -427,6 +427,7 @@
 		></script>
 
 		<!-- Custom JavaScript -->
+		<script src="javascript/smoothScrolling.js" type="text/javascript"></script>
 		<script src="javascript/navbarCollapse.js" type="text/javascript"></script>
 	</body>
 </html>
