Updated the FAQ's

--- a/index.html
+++ b/index.html
@@ -422,21 +422,17 @@
 					<h2>Frequently Asked Questions</h2>
 
 					<p class="faq-body">
-						<strong>Do you have a gift registery?</strong>
+						<strong>Can I bring a guest?</strong>
 						<p>
-							We know that attending a destination wedding is not cheap. We
-							don't expect gifts from any of our guests. However, if you're
-							feeling generous, please give us cash. It will be difficult to
-							travel with items and we are currently saving up to purchase a home.
+							Unfortunately, we can only admit those listed on your invitation. There is a strict limit on seating and all of the meals
+							are accounted for according to the guest list. Thank you for your understanding. 
 						</p>
 					</p>
 
 					<p class="faq-body">
-						<strong>Can I bring a guest?</strong>
+						<strong>Are you registred anywhere?</strong>
 						<p>
-							Unfortunately, we will only be admitting those that were
-							listed on your invitation. Food plates and seats are strictly
-							accounted for.
+							Because we are saving for a new home, we would appreciate cash donations in lieu of gifts. Much love and thanks!
 						</p>
 					</p>
 				</div>
