Increased size of h2 titles. Spell check. Fixed text shadow of jumbotron-text.

--- a/index.html
+++ b/index.html
@@ -430,7 +430,7 @@
 					</p>
 
 					<p class="faq-body">
-						<strong>Are you registred anywhere?</strong>
+						<strong>Are you registered anywhere?</strong>
 						<p>
 							Because we are saving for a new home, we would appreciate cash donations in lieu of gifts. Much love and thanks!
 						</p>
