Added a favicon. Completed Hotels section, just need to add more Hotel cards. Added FAQ questions.

--- a/index.html
+++ b/index.html
@@ -36,7 +36,15 @@
 		<link rel="stylesheet" href="/css/travelInformation.css" />
 		<link rel="stylesheet" href="/css/faq.css" />
 
-		<title>Marilynn ♥ Ivan | Our Wedding</title>
+		<title>Marilynn & Ivan | Our Wedding</title>
+		
+		<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+		<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+		<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+		<link rel="manifest" href="/site.webmanifest">
+		<link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
+		<meta name="msapplication-TileColor" content="#da532c">
+		<meta name="theme-color" content="#ffffff">
 	</head>
 
 	<body>
@@ -232,7 +240,7 @@
 							rel="noopener noreferrer"
 							>Casa Grande Morelia</a
 						>
-						<br /><i class="far fa-clock"></i>6:00PM
+						<br /><i class="far fa-clock"></i>6:00PM - 12:00AM
 					</p>
 				</div>
 
@@ -254,7 +262,13 @@
 		<!-- Hotels -->
 		<div class="container-fluid hotels" id="hotels">
 			<h2 id="hotels-h2">Hotels</h2>
-
+			<p> We have personally stayed at HERENCIA, Hotel Los Juaninos, and Hotel de La Soledad and fully recommend all three of them.
+			</p>
+			<p>
+				 When you book your hotel, <strong>we strongly
+				recommend that you do not book through third party travel sites</strong> (e.g. Expedia, Travelocity, Hotels.com, etc). Instead, contact the hotel directly via
+				phone or e-mail. 
+			</p>
 			<div class="row align-items-center justify-content-start">
 				<div class="col-lg-4">
 					<div class="card">
@@ -271,17 +285,24 @@
 								~ $60/night USD
 							</p>
 							<p class="card-text">
-								Some quick example text to build on the card title and make up
-								the bulk of the card's content.
+								Wonderful hotel that is more affordable but still exquisite and close enough to walk to the cathedral and venue.
 							</p>
 							<p><i class="fas fa-phone-alt"></i>+52 (443) 232-0246</p>
 							<p><i class="far fa-envelope"></i>​​​​info@hherencia.com</p>
 							<a
 								href="https://www.hherencia.com/home-in/"
+								class="card-website-link"
 								target="_blank"
 								rel="noopener noreferrer"
-								>Website</a
-							>
+								>Website
+							</a>
+
+							<a
+								href="https://www.google.com/maps/dir/HERENCIA+by+Hosting+House,+Avenida+Francisco+I.+Madero+Oriente,+Centro+hist%C3%B3rico+de+Morelia,+Morelia,+Michoac%C3%A1n,+Mexico/Morelia+Cathedral,+Av+Francisco+I.+Madero+Pte+S%2FN,+Centro+hist%C3%B3rico+de+Morelia,+58000+Morelia,+Mich.,+Mexico/Casa+Grande,+Portal+Matamoros,+Calle+Abasolo,+Centro+hist%C3%B3rico+de+Morelia,+Morelia,+Michoac%C3%A1n,+Mexico/@19.7024682,-101.1934718,18z/data=!3m1!4b1!4m20!4m19!1m5!1m1!1s0x842d0e1c4bf26229:0x5adfc825a59cc7c9!2m2!1d-101.1905515!2d19.7027423!1m5!1m1!1s0x842d0e71a95bc4ed:0xaf13bc43e8e69af7!2m2!1d-101.1923185!2d19.702423!1m5!1m1!1s0x842d0e70607dea63:0x937bc9ca56599a37!2m2!1d-101.1942077!2d19.7020755!3e2"
+								target="_blank"
+								rel="noopener noreferrer"
+								>Directions
+							</a>
 						</div>
 					</div>
 				</div>
@@ -302,17 +323,24 @@
 								~ $90/night USD
 							</p>
 							<p class="card-text">
-								Some quick example text to build on the card title and make up
-								the bulk of the card's content.
+								Our number one recommendation due to a combination of price and its location. This hotel is literally across the street from the cathedral.
 							</p>
 							<p><i class="fas fa-phone-alt"></i>+52 (443) 312-0036</p>
 							<p><i class="far fa-envelope"></i>juaninos@hoteljuaninos.com</p>
 							<a
 								href="https://www.hoteljuaninos.com.mx/"
+								class="card-website-link"
 								target="_blank"
 								rel="noopener noreferrer"
-								>Website</a
-							>
+								>Website
+							</a>
+
+							<a
+								href="https://www.google.com/maps/dir/Hotel+Los+Juaninos,+Avenida+Morelos+Sur,+Centro+hist%C3%B3rico+de+Morelia,+Morelia,+Michoac%C3%A1n,+Mexico/Morelia+Cathedral,+Av+Francisco+I.+Madero+Pte+S%2FN,+Centro+hist%C3%B3rico+de+Morelia,+58000+Morelia,+Mich.,+Mexico/Casa+Grande,+Portal+Matamoros,+Calle+Abasolo,+Centro+hist%C3%B3rico+de+Morelia,+Morelia,+Michoac%C3%A1n,+Mexico/@19.702454,-101.1932971,19z/data=!3m1!4b1!4m20!4m19!1m5!1m1!1s0x842d0e7199b95383:0x38b1a34bb25f55d5!2m2!1d-101.1912921!2d19.702536!1m5!1m1!1s0x842d0e71a95bc4ed:0xaf13bc43e8e69af7!2m2!1d-101.1923185!2d19.702423!1m5!1m1!1s0x842d0e70607dea63:0x937bc9ca56599a37!2m2!1d-101.1942077!2d19.7020755!3e2"
+								target="_blank"
+								rel="noopener noreferrer"
+								>Directions
+							</a>
 						</div>
 					</div>
 				</div>
@@ -334,17 +362,25 @@
 								~ $130/night USD
 							</p>
 							<p class="card-text">
-								Some quick example text to build on the card title and make up
-								the bulk of the card's content.
+								The crown jewel, this is the most expensive hotel on our list but for good reason. Definitely the most luxurious accomodation that one could 
+								find in Morelia. 
 							</p>
 							<p><i class="fas fa-phone-alt"></i>+52 (443) 312-1888</p>
 							<p><i class="far fa-envelope"></i>reservaciones@hsoledad.com</p>
 							<a
 								href="https://hoteldelasoledad.com/en/"
+								class="card-website-link"
 								target="_blank"
 								rel="noopener noreferrer"
-								>Website</a
-							>
+								>Website
+							</a>
+
+							<a
+								href="https://www.google.com/maps/dir/Hotel+de+la+Soledad,+Ignacio+Zaragoza,+Centro+hist%C3%B3rico+de+Morelia,+Morelia,+Michoac%C3%A1n,+Mexico/Morelia+Cathedral,+Av+Francisco+I.+Madero+Pte+S%2FN,+Centro+hist%C3%B3rico+de+Morelia,+58000+Morelia,+Mich.,+Mexico/Casa+Grande,+Portal+Matamoros,+Calle+Abasolo,+Centro+hist%C3%B3rico+de+Morelia,+Morelia,+Michoac%C3%A1n,+Mexico/@19.7029718,-101.1943457,18z/data=!3m1!4b1!4m20!4m19!1m5!1m1!1s0x842d0e703606b85d:0x48c9187fe019a6c0!2m2!1d-101.1931448!2d19.7036333!1m5!1m1!1s0x842d0e71a95bc4ed:0xaf13bc43e8e69af7!2m2!1d-101.1923185!2d19.702423!1m5!1m1!1s0x842d0e70607dea63:0x937bc9ca56599a37!2m2!1d-101.1942077!2d19.7020755!3e2"
+								target="_blank"
+								rel="noopener noreferrer"
+								>Directions
+							</a>
 						</div>
 					</div>
 				</div>
@@ -422,17 +458,46 @@
 					<h2>Frequently Asked Questions</h2>
 
 					<p class="faq-body">
+						<strong>Will I need to arrange transportation between my hotel, the cathedral, and the venue?</strong>
+						<p>
+							The church, the venue, and all of the accomodations listed under the Hotels section are all walking distance of one another! It is literally a 5 - 10
+							minute walk between the three. You will not need to arrange for transportation of any kind.
+						</p>
+					</p>
+
+					<p class="faq-body">
 						<strong>Can I bring a guest?</strong>
 						<p>
 							Unfortunately, we can only admit those listed on your invitation. There is a strict limit on seating and all of the meals
-							are accounted for according to the guest list. Thank you for your understanding. 
+							are accounted for according to the number of guests that RSVP'd. Thank you for your understanding. 
 						</p>
 					</p>
 
 					<p class="faq-body">
 						<strong>Are you registered anywhere?</strong>
 						<p>
-							Because we are saving for a new home, we would appreciate cash donations in lieu of gifts. Much love and thanks!
+							We ask only for your love and presence on our special day but if you were thinking of giving a gift, we would appreciate a cash gift to help us save for our new home. Thank you!
+						</p>
+					</p>
+
+					<p class="faq-body">
+						<strong>Are children allowed?</strong>
+						<p>
+							Of course! Now for those that are interested, the venue does offer nanny services for 5 hours at a price of $34 USD for up to 6 children per nanny. 
+						</p>
+					</p>
+
+					<p class="faq-body">
+						<strong>What will the weather be in Morelia during this time of year?</strong>
+						<p>
+							In the summer months, Morelia is usually a perfect 70 - 80°F with clear skies and sunshine. However, it does occasionally rain so at least one rain jacket or coat is recommended.
+						</p>
+					</p>
+
+					<p class="faq-body">
+						<strong>I still have questions, what is the best way to contact you?</strong>
+						<p>
+							Feel free to shoot us an e-mail at ortizmurro.wedding@gmail.com. 
 						</p>
 					</p>
 				</div>
