--- a/index.html
+++ b/index.html
@@ -39,6 +39,8 @@
 		<title>Marilynn & Ivan | Our Wedding</title>
 		
 		<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+		<meta name="apple-mobile-web-app-title" content="Marilynn & Ivan">
+		<meta name="application-name" content="Marilynn & Ivan">
 		<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
 		<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
 		<link rel="manifest" href="/site.webmanifest">
