Added optimized images

--- a/index.html
+++ b/index.html
@@ -166,35 +166,35 @@
 						<div class="carousel-inner">
 							<div class="carousel-item active">
 								<img
-									src="/images/catedral/catedral1.jpg"
+									src="/images/catedral/catedral1.webp"
 									class="d-block w-100"
 									alt="..."
 								/>
 							</div>
 							<div class="carousel-item">
 								<img
-									src="/images/catedral/catedral2.png"
+									src="/images/catedral/catedral2.webp"
 									class="d-block w-100"
 									alt="..."
 								/>
 							</div>
 							<div class="carousel-item">
 								<img
-									src="/images/catedral/catedral3.jpg"
+									src="/images/catedral/catedral3.webp"
 									class="d-block w-100"
 									alt="..."
 								/>
 							</div>
 							<div class="carousel-item">
 								<img
-									src="/images/catedral/catedral4.png"
+									src="/images/catedral/catedral4.webp"
 									class="d-block w-100"
 									alt="..."
 								/>
 							</div>
 							<div class="carousel-item">
 								<img
-									src="/images/catedral/catedral5.png"
+									src="/images/catedral/catedral5.webp"
 									class="d-block w-100"
 									alt="..."
 								/>
@@ -275,7 +275,7 @@
 				<div class="col-lg-4">
 					<div class="card">
 						<img
-							src="/images/hotels/herencia.png"
+							src="/images/hotels/herencia.webp"
 							class="card-img-top"
 							alt="HERENCIA"
 						/>
@@ -312,7 +312,7 @@
 				<div class="col-lg-4">
 					<div class="card">
 						<img
-							src="/images/hotels/juaninos.png"
+							src="/images/hotels/juaninos.webp"
 							class="card-img-top"
 							alt="Hotel Los Juaninos"
 						/>
@@ -350,7 +350,7 @@
 				<div class="col-lg-4">
 					<div class="card">
 						<img
-							src="/images/hotels/soledad.png"
+							src="/images/hotels/soledad.webp"
 							class="card-img-top"
 							alt="Hotel de La Soledad"
 						/>
