Modified FAQs, re-sized images of the cathedral, and added a ribbon to the juaninos hotel card.

--- a/index.html
+++ b/index.html
@@ -271,8 +271,8 @@
 				recommend that you do not book through third party travel sites</strong> (e.g. Expedia, Travelocity, Hotels.com, etc). Instead, contact the hotel directly via
 				phone or e-mail. 
 			</p>
-			<div class="row align-items-center justify-content-start">
-				<div class="col-lg-4">
+			<div class="row">
+				<div class="col-lg-4 d-flex align-items-stretch">
 					<div class="card">
 						<img
 							src="/images/hotels/herencia.webp"
@@ -309,8 +309,11 @@
 					</div>
 				</div>
 
-				<div class="col-lg-4">
-					<div class="card">
+				<div class="col-lg-4 d-flex align-items-stretch">
+					<div class="card" id="hotel-los-juaninos-card">
+						<div class="ribbon">
+							<span>Our top choice</span>
+						</div>
 						<img
 							src="/images/hotels/juaninos.webp"
 							class="card-img-top"
@@ -347,7 +350,7 @@
 					</div>
 				</div>
 
-				<div class="col-lg-4">
+				<div class="col-lg-4 d-flex align-items-stretch">
 					<div class="card">
 						<img
 							src="/images/hotels/soledad.webp"
@@ -485,7 +488,8 @@
 					<p class="faq-body">
 						<strong>Are children allowed?</strong>
 						<p>
-							Of course! Now for those that are interested, the venue does offer nanny services for 5 hours at a price of $34 USD for up to 6 children per nanny. 
+							Yes, but guests with children under eight are strongly encouraged to take advantage of the nanny service provided by the venue. The cost
+							is $34 USD for 5 hours and one nanny may be assigned up to 6 children.
 						</p>
 					</p>
 
