Fixed numerous grammatical errors.

--- a/index.html
+++ b/index.html
@@ -448,8 +448,12 @@
 						</div>
 
 						<div class="col-md-10">
-							The currency in Mexico is the peso. As of June 2021, $1 Mexican
-							peso is equivalent to around $19 US Dollars.
+							The currency in Mexico is the Peso. As of June 2021, the
+							<a href="https://www.xe.com/currencyconverter/convert/?Amount=1&From=USD&To=MXN"
+							target="_blank"
+							rel="noopener noreferrer">
+							exchange rate</a>
+							is $19 MXN for $1 USD. 
 						</div>
 					</div>
 				</div>
@@ -465,8 +469,8 @@
 					<p class="faq-body">
 						<strong>Will I need to arrange transportation between my hotel, the cathedral, and the venue?</strong>
 						<p>
-							The church, the venue, and all of the accomodations listed under the Hotels section are all walking distance of one another! It is literally a 5 - 10
-							minute walk between the three. You will not need to arrange for transportation of any kind.
+							The church, the venue, and each of the accomodations listed under the Hotels section are all walking distance of one another! Your total commute
+							time between the three should be 5 - 10 minutes. You will not need to arrange for transportation of any kind.
 						</p>
 					</p>
 
@@ -488,13 +492,13 @@
 					<p class="faq-body">
 						<strong>Are children allowed?</strong>
 						<p>
-							Yes, but guests with children under eight are strongly encouraged to take advantage of the nanny service provided by the venue. The cost
+							Yes, but guests with children under the age of eight are strongly encouraged to take advantage of the nanny service provided by the venue. The cost
 							is $34 USD for 5 hours and one nanny may be assigned up to 6 children.
 						</p>
 					</p>
 
 					<p class="faq-body">
-						<strong>What will the weather be in Morelia during this time of year?</strong>
+						<strong>What will the weather be like in Morelia during this time of year?</strong>
 						<p>
 							In the summer months, Morelia is usually a perfect 70 - 80°F with clear skies and sunshine. However, it does occasionally rain so at least one rain jacket or coat is recommended.
 						</p>
@@ -503,7 +507,7 @@
 					<p class="faq-body">
 						<strong>I still have questions, what is the best way to contact you?</strong>
 						<p>
-							Feel free to shoot us an e-mail at ortizmurro.wedding@gmail.com. 
+							Feel free to shoot us an e-mail at ortizmuro.wedding@gmail.com. 
 						</p>
 					</p>
 				</div>
