Completed the Hotels section. 6 hotels with different price points.

--- a/index.html
+++ b/index.html
@@ -275,24 +275,23 @@
 				<div class="col-lg-4 d-flex align-items-stretch">
 					<div class="card">
 						<img
-							src="/images/hotels/herencia.webp"
+							src="/images/hotels/hotel-mision-catedral.webp"
 							class="card-img-top"
-							alt="HERENCIA"
+							alt="Hotel Mision Catedral"
 						/>
 						<div class="card-body">
-							<h5 class="card-title">HERENCIA</h5>
+							<h5 class="card-title">Hotel Mision Catedral</h5>
 							<p class="card-text">
-								<i class="fas fa-dollar-sign"></i
-								><i class="fas fa-dollar-sign"></i>
-								~ $60/night USD
+								<i class="fas fa-dollar-sign"></i><i class="fas fa-dollar-sign"></i>
+								~ $50/night USD
 							</p>
 							<p class="card-text">
-								Wonderful hotel that is more affordable but still exquisite and close enough to walk to the cathedral and venue.
+								A modest establishment with fantastic views of the cathedral and plaza. This is an affordable option that places you 
+								right in the center of everything. 
 							</p>
-							<p><i class="fas fa-phone-alt"></i>+52 (443) 232-0246</p>
-							<p><i class="far fa-envelope"></i>​​​​info@hherencia.com</p>
+							<p><i class="fas fa-phone-alt"></i>+52 (443) 313-0406</p>
 							<a
-								href="https://www.hherencia.com/home-in/"
+								href="https://www.hotelesmision.com.mx/en/"
 								class="card-website-link"
 								target="_blank"
 								rel="noopener noreferrer"
@@ -300,7 +299,44 @@
 							</a>
 
 							<a
-								href="https://www.google.com/maps/dir/HERENCIA+by+Hosting+House,+Avenida+Francisco+I.+Madero+Oriente,+Centro+hist%C3%B3rico+de+Morelia,+Morelia,+Michoac%C3%A1n,+Mexico/Morelia+Cathedral,+Av+Francisco+I.+Madero+Pte+S%2FN,+Centro+hist%C3%B3rico+de+Morelia,+58000+Morelia,+Mich.,+Mexico/Casa+Grande,+Portal+Matamoros,+Calle+Abasolo,+Centro+hist%C3%B3rico+de+Morelia,+Morelia,+Michoac%C3%A1n,+Mexico/@19.7024682,-101.1934718,18z/data=!3m1!4b1!4m20!4m19!1m5!1m1!1s0x842d0e1c4bf26229:0x5adfc825a59cc7c9!2m2!1d-101.1905515!2d19.7027423!1m5!1m1!1s0x842d0e71a95bc4ed:0xaf13bc43e8e69af7!2m2!1d-101.1923185!2d19.702423!1m5!1m1!1s0x842d0e70607dea63:0x937bc9ca56599a37!2m2!1d-101.1942077!2d19.7020755!3e2"
+								href="https://www.google.com/maps/dir/Hotel+Misi%C3%B3n+Catedral+Morelia,+Ignacio+Zaragoza+37,+Centro+hist%C3%B3rico+de+Morelia,+58000+Morelia,+Mich.,+Mexico/Catedral+de+Morelia,+Avenida+Francisco+I.+Madero+Poniente,+Centro+hist%C3%B3rico+de+Morelia,+Morelia,+Michoac%C3%A1n,+Mexico/Casa+Grande,+Portal+Matamoros,+Calle+Abasolo,+Centro+hist%C3%B3rico+de+Morelia,+Morelia,+Michoac%C3%A1n,+Mexico/@19.7026148,-101.1938136,19.53z/data=!4m20!4m19!1m5!1m1!1s0x85d1fc1822eaee79:0xb10c6eae73eca3f9!2m2!1d-101.1933975!2d19.7032279!1m5!1m1!1s0x842d0e71a95bc4ed:0xaf13bc43e8e69af7!2m2!1d-101.1923185!2d19.702423!1m5!1m1!1s0x842d0e70607dea63:0x937bc9ca56599a37!2m2!1d-101.1942077!2d19.7020755!3e2"
+								target="_blank"
+								rel="noopener noreferrer"
+								>Directions
+							</a>
+						</div>
+					</div>
+				</div>
+
+				<div class="col-lg-4 d-flex align-items-stretch">
+					<div class="card">
+						<img
+							src="/images/hotels/alameda.webp"
+							class="card-img-top"
+							alt="Hotel Alameda"
+						/>
+						<div class="card-body">
+							<h5 class="card-title">Hotel Alameda</h5>
+							<p class="card-text">
+								<i class="fas fa-dollar-sign"></i
+								><i class="fas fa-dollar-sign"></i>
+								~ $50/night USD
+							</p>
+							<p class="card-text">
+								Another great option that's also located across from the main plaza and cathedral. This hotel has a more modern feel. 
+							</p>
+							<p><i class="fas fa-phone-alt"></i>+52 (443) 312-2023</p>
+							<p><i class="far fa-envelope"></i>reserva@hotel-alameda.com.mx</p>
+							<a
+								href="https://www.hotel-alameda.com.mx/"
+								class="card-website-link"
+								target="_blank"
+								rel="noopener noreferrer"
+								>Website
+							</a>
+
+							<a
+								href="https://www.google.com/maps/dir/Hotel+Alameda+Morelia,+Centro+Hist%C3%B3rico,+Av+Francisco+I.+Madero+Ote+313,+Centro+hist%C3%B3rico+de+Morelia,+58000+Morelia,+Mich.,+Mexico/Catedral+de+Morelia,+Avenida+Francisco+I.+Madero+Poniente,+Centro+hist%C3%B3rico+de+Morelia,+Morelia,+Michoac%C3%A1n,+Mexico/Casa+Grande,+Portal+Matamoros,+Calle+Abasolo,+Centro+hist%C3%B3rico+de+Morelia,+Morelia,+Michoac%C3%A1n,+Mexico/@19.7021468,-101.1935711,18.6z/data=!4m20!4m19!1m5!1m1!1s0x842d0e704f9c5d3f:0x71d6b6f1c4ac8306!2m2!1d-101.1943234!2d19.703155!1m5!1m1!1s0x842d0e71a95bc4ed:0xaf13bc43e8e69af7!2m2!1d-101.1923185!2d19.702423!1m5!1m1!1s0x842d0e70607dea63:0x937bc9ca56599a37!2m2!1d-101.1942077!2d19.7020755!3e2"
 								target="_blank"
 								rel="noopener noreferrer"
 								>Directions
@@ -353,6 +389,43 @@
 				<div class="col-lg-4 d-flex align-items-stretch">
 					<div class="card">
 						<img
+							src="/images/hotels/herencia.webp"
+							class="card-img-top"
+							alt="HERENCIA"
+						/>
+						<div class="card-body">
+							<h5 class="card-title">HERENCIA</h5>
+							<p class="card-text">
+								<i class="fas fa-dollar-sign"></i
+								><i class="fas fa-dollar-sign"></i>
+								~ $60/night USD
+							</p>
+							<p class="card-text">
+								Wonderful hotel that is more affordable but still exquisite and close enough to walk to the cathedral and venue.
+							</p>
+							<p><i class="fas fa-phone-alt"></i>+52 (443) 232-0246</p>
+							<p><i class="far fa-envelope"></i>​​​​info@hherencia.com</p>
+							<a
+								href="https://www.hherencia.com/home-in/"
+								class="card-website-link"
+								target="_blank"
+								rel="noopener noreferrer"
+								>Website
+							</a>
+
+							<a
+								href="https://www.google.com/maps/dir/HERENCIA+by+Hosting+House,+Avenida+Francisco+I.+Madero+Oriente,+Centro+hist%C3%B3rico+de+Morelia,+Morelia,+Michoac%C3%A1n,+Mexico/Morelia+Cathedral,+Av+Francisco+I.+Madero+Pte+S%2FN,+Centro+hist%C3%B3rico+de+Morelia,+58000+Morelia,+Mich.,+Mexico/Casa+Grande,+Portal+Matamoros,+Calle+Abasolo,+Centro+hist%C3%B3rico+de+Morelia,+Morelia,+Michoac%C3%A1n,+Mexico/@19.7024682,-101.1934718,18z/data=!3m1!4b1!4m20!4m19!1m5!1m1!1s0x842d0e1c4bf26229:0x5adfc825a59cc7c9!2m2!1d-101.1905515!2d19.7027423!1m5!1m1!1s0x842d0e71a95bc4ed:0xaf13bc43e8e69af7!2m2!1d-101.1923185!2d19.702423!1m5!1m1!1s0x842d0e70607dea63:0x937bc9ca56599a37!2m2!1d-101.1942077!2d19.7020755!3e2"
+								target="_blank"
+								rel="noopener noreferrer"
+								>Directions
+							</a>
+						</div>
+					</div>
+				</div>
+
+				<div class="col-lg-4 d-flex align-items-stretch">
+					<div class="card">
+						<img
 							src="/images/hotels/soledad.webp"
 							class="card-img-top"
 							alt="Hotel de La Soledad"
@@ -367,8 +440,7 @@
 								~ $130/night USD
 							</p>
 							<p class="card-text">
-								The crown jewel, this is the most expensive hotel on our list but for good reason. Definitely the most luxurious accomodation that one could 
-								find in Morelia. 
+								A crown jewel, this is one of the most luxurious accomodations in all of Morelia. Incredible hotel with fantastic architecture.
 							</p>
 							<p><i class="fas fa-phone-alt"></i>+52 (443) 312-1888</p>
 							<p><i class="far fa-envelope"></i>reservaciones@hsoledad.com</p>
@@ -389,6 +461,46 @@
 						</div>
 					</div>
 				</div>
+
+				<div class="col-lg-4 d-flex align-items-stretch">
+					<div class="card">
+						<img
+							src="/images/hotels/cantera-diez-hotel-boutique.webp"
+							class="card-img-top"
+							alt="cantera-diez-hotel-boutique"
+						/>
+						<div class="card-body">
+							<h5 class="card-title">Cantera Diez Hotel Boutique</h5>
+							<p class="card-text">
+								<i class="fas fa-dollar-sign"></i
+								><i class="fas fa-dollar-sign"></i
+								><i class="fas fa-dollar-sign"></i
+								><i class="fas fa-dollar-sign"></i
+								><i class="fas fa-dollar-sign"></i>
+								~ $200/night USD
+							</p>
+							<p class="card-text">
+								A 5-star modern hotel with breath-taking views of the cathedral. If you want the best that Morelia has to offer, this is the hotel for you. 
+							</p>
+							<p><i class="fas fa-phone-alt"></i>+52 (443) 312-5419</p>
+							<a
+								href="https://www.canteradiezhotel.com/"
+								class="card-website-link"
+								target="_blank"
+								rel="noopener noreferrer"
+								>Website
+							</a>
+
+							<a
+								href="https://www.google.com/maps/dir/Cantera+Diez+Hotel+Boutique,+Benito+Ju%C3%A1rez+63,+Centro+hist%C3%B3rico+de+Morelia,+58000+Morelia,+Mich.,+Mexico/Catedral+de+Morelia,+Avenida+Francisco+I.+Madero+Poniente,+Centro+hist%C3%B3rico+de+Morelia,+Morelia,+Michoac%C3%A1n,+Mexico/Casa+Grande,+Portal+Matamoros,+C.+Abasolo+98,+Centro+hist%C3%B3rico+de+Morelia,+58000+Morelia,+Mich.,+Mexico/@19.7024207,-101.1931284,19.02z/data=!4m20!4m19!1m5!1m1!1s0x842d0e71b7b5e98f:0xc7f77628a8eab120!2m2!1d-101.192383!2d19.7034272!1m5!1m1!1s0x842d0e71a95bc4ed:0xaf13bc43e8e69af7!2m2!1d-101.1923185!2d19.702423!1m5!1m1!1s0x842d0e70607dea63:0x937bc9ca56599a37!2m2!1d-101.1942077!2d19.7020755!3e2"
+								target="_blank"
+								rel="noopener noreferrer"
+								>Directions
+							</a>
+						</div>
+					</div>
+				</div>
+
 			</div>
 		</div>
 
