Added tel and e-mail links.

--- a/index.html
+++ b/index.html
@@ -267,9 +267,8 @@
 			<p> We have personally stayed at HERENCIA, Hotel Los Juaninos, and Hotel de La Soledad and fully recommend all three of them.
 			</p>
 			<p>
-				 When you book your hotel, <strong>we strongly
-				recommend that you do not book through third party travel sites</strong> (e.g. Expedia, Travelocity, Hotels.com, etc). Instead, contact the hotel directly via
-				phone or e-mail. 
+				When you're ready to make your reservation, <strong>we strongly advise that you do not book through third-party travel sites</strong> (e.g. Expedia,
+				Travelocity, Hotels.com, etc). Instead, contact the hotel directly via phone or e-mail. 
 			</p>
 			<div class="row">
 				<div class="col-lg-4 d-flex align-items-stretch">
@@ -289,7 +288,7 @@
 								A modest establishment with fantastic views of the cathedral and plaza. This is an affordable option that places you 
 								right in the center of everything. 
 							</p>
-							<p><i class="fas fa-phone-alt"></i>+52 (443) 313-0406</p>
+							<p><i class="fas fa-phone-alt"></i><a href="tel:+52443-313-0406">+52 (443) 313-0406</a></p>
 							<a
 								href="https://www.hotelesmision.com.mx/en/"
 								class="card-website-link"
@@ -323,10 +322,10 @@
 								~ $50/night USD
 							</p>
 							<p class="card-text">
-								Another great option that's also located across from the main plaza and cathedral. This hotel has a more modern feel. 
+								Another great option that's also located across from the main plaza and cathedral. This hotel has a more modern feel and has great rates. 
 							</p>
-							<p><i class="fas fa-phone-alt"></i>+52 (443) 312-2023</p>
-							<p><i class="far fa-envelope"></i>reserva@hotel-alameda.com.mx</p>
+							<p><i class="fas fa-phone-alt"></i><a href="tel:+52443-456-7890">+52 (443) 312-2023</a></p>
+							<p><i class="far fa-envelope"></i><a href = "mailto: reserva@hotel-alameda.com.mx">E-mail</p>
 							<a
 								href="https://www.hotel-alameda.com.mx/"
 								class="card-website-link"
@@ -364,10 +363,10 @@
 								~ $90/night USD
 							</p>
 							<p class="card-text">
-								Our number one recommendation due to a combination of price and its location. This hotel is literally across the street from the cathedral.
+								Our number one recommendation due to its great price and location. This hotel is directly across the street from the cathedral.
 							</p>
-							<p><i class="fas fa-phone-alt"></i>+52 (443) 312-0036</p>
-							<p><i class="far fa-envelope"></i>juaninos@hoteljuaninos.com</p>
+							<p><i class="fas fa-phone-alt"></i><a href="tel:+52443-312-0036">+52 (443) 312-0036</a></p>
+							<p><i class="far fa-envelope"></i><a href = "mailto:juaninos@hoteljuaninos.com">E-mail</p>
 							<a
 								href="https://www.hoteljuaninos.com.mx/"
 								class="card-website-link"
@@ -401,10 +400,11 @@
 								~ $60/night USD
 							</p>
 							<p class="card-text">
-								Wonderful hotel that is more affordable but still exquisite and close enough to walk to the cathedral and venue.
+								Wonderful hotel that is a bit further from the center but still only a short walk away from the cathedral. Personally, this would be our
+								second choice after Hotel Los Juaninos.
 							</p>
-							<p><i class="fas fa-phone-alt"></i>+52 (443) 232-0246</p>
-							<p><i class="far fa-envelope"></i>​​​​info@hherencia.com</p>
+							<p><i class="fas fa-phone-alt"></i><a href="tel:+52443-232-0246">+52 (443) 232-0246</a></p>
+							<p><i class="far fa-envelope"></i><a href = "mailto:info@hherencia.com">E-mail</p>
 							<a
 								href="https://www.hherencia.com/home-in/"
 								class="card-website-link"
@@ -442,8 +442,8 @@
 							<p class="card-text">
 								A crown jewel, this is one of the most luxurious accomodations in all of Morelia. Incredible hotel with fantastic architecture.
 							</p>
-							<p><i class="fas fa-phone-alt"></i>+52 (443) 312-1888</p>
-							<p><i class="far fa-envelope"></i>reservaciones@hsoledad.com</p>
+							<p><i class="fas fa-phone-alt"></i><a href="tel:+52443-312-1888">+52 (443) 312-1888</a></p>
+							<p><i class="far fa-envelope"></i><a href = "mailto:reservaciones@hsoledad.com">E-mail</p>
 							<a
 								href="https://hoteldelasoledad.com/en/"
 								class="card-website-link"
@@ -480,9 +480,9 @@
 								~ $200/night USD
 							</p>
 							<p class="card-text">
-								A 5-star modern hotel with breath-taking views of the cathedral. If you want the best that Morelia has to offer, this is the hotel for you. 
+								A modern 5-star hotel with breath-taking views of the cathedral. If you want the best that Morelia has to offer, this is the hotel for you. 
 							</p>
-							<p><i class="fas fa-phone-alt"></i>+52 (443) 312-5419</p>
+							<p><i class="fas fa-phone-alt"></i><a href="tel:+52443-312-5419">+52 (443) 312-5419</a></p>
 							<a
 								href="https://www.canteradiezhotel.com/"
 								class="card-website-link"
@@ -581,7 +581,7 @@
 					<p class="faq-body">
 						<strong>Will I need to arrange transportation between my hotel, the cathedral, and the venue?</strong>
 						<p>
-							The church, the venue, and each of the accomodations listed under the Hotels section are all walking distance of one another! Your total commute
+							The church, the venue, and all of the hotels listed above are all walking distance from one another! Your total commute
 							time between the three should be 5 - 10 minutes. You will not need to arrange for transportation of any kind.
 						</p>
 					</p>
@@ -619,7 +619,7 @@
 					<p class="faq-body">
 						<strong>I still have questions, what is the best way to contact you?</strong>
 						<p>
-							Feel free to shoot us an e-mail at ortizmuro.wedding@gmail.com. 
+							Feel free to shoot us an e-mail at <a href = "mailto: ortizmuro.wedding@gmail.com. ">ortizmuro.wedding@gmail.com. </p>
 						</p>
 					</p>
 				</div>
