Fixed email and phone links for hotels.

--- a/index.html
+++ b/index.html
@@ -324,8 +324,8 @@
 							<p class="card-text">
 								Another great option that's also located across from the main plaza and cathedral. This hotel has a more modern feel and has great rates. 
 							</p>
-							<p><i class="fas fa-phone-alt"></i><a href="tel:+52443-456-7890">+52 (443) 312-2023</a></p>
-							<p><i class="far fa-envelope"></i><a href = "mailto: reserva@hotel-alameda.com.mx">E-mail</p>
+							<p><i class="fas fa-phone-alt"></i><a href="tel:+52443-456-7890">+52 (443) 456-7890</a></p>
+							<p><i class="far fa-envelope"></i><a href = "mailto: reserva@hotel-alameda.com.mx">reserva@hotel-alameda.com.mx</p>
 							<a
 								href="https://www.hotel-alameda.com.mx/"
 								class="card-website-link"
@@ -366,7 +366,7 @@
 								Our number one recommendation due to its great price and location. This hotel is directly across the street from the cathedral.
 							</p>
 							<p><i class="fas fa-phone-alt"></i><a href="tel:+52443-312-0036">+52 (443) 312-0036</a></p>
-							<p><i class="far fa-envelope"></i><a href = "mailto:juaninos@hoteljuaninos.com">E-mail</p>
+							<p><i class="far fa-envelope"></i><a href = "mailto:juaninos@hoteljuaninos.com">juaninos@hoteljuaninos.com</p>
 							<a
 								href="https://www.hoteljuaninos.com.mx/"
 								class="card-website-link"
@@ -404,7 +404,7 @@
 								second choice after Hotel Los Juaninos.
 							</p>
 							<p><i class="fas fa-phone-alt"></i><a href="tel:+52443-232-0246">+52 (443) 232-0246</a></p>
-							<p><i class="far fa-envelope"></i><a href = "mailto:info@hherencia.com">E-mail</p>
+							<p><i class="far fa-envelope"></i><a href = "mailto:info@hherencia.com">info@hherencia.com</p>
 							<a
 								href="https://www.hherencia.com/home-in/"
 								class="card-website-link"
@@ -443,7 +443,7 @@
 								A crown jewel, this is one of the most luxurious accomodations in all of Morelia. Incredible hotel with fantastic architecture.
 							</p>
 							<p><i class="fas fa-phone-alt"></i><a href="tel:+52443-312-1888">+52 (443) 312-1888</a></p>
-							<p><i class="far fa-envelope"></i><a href = "mailto:reservaciones@hsoledad.com">E-mail</p>
+							<p><i class="far fa-envelope"></i><a href = "mailto:reservaciones@hsoledad.com">reservaciones@hsoledad.com</p>
 							<a
 								href="https://hoteldelasoledad.com/en/"
 								class="card-website-link"
